--- a/video.html
+++ b/video.html
@@ -10,8 +10,9 @@
     <div class="animation-container" id="animationContainer"></div>
     <video id="loveVideo" autoplay>
         <source src="SRC/WhatsApp Video 2025-03-29 at 22.11.37_94945b01.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+            Your browser does not support the video tag.
+        </video>
+    </div>
     
     <div class="controls" id="controls">
         <button onclick="replayVideo()">Replay ❤️</button>
