--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="container">
         <h1>My Love, Omoshalewa ❤️</h1>
         <p class="message">From the moment I met you, my life changed forever. You are my heart, my joy, and my greatest blessing. I love you more than words can express. 💙</p>
+        <p>My love, every day without you feels like a chapter missing from my story. No matter the distance, my heart still beats only for you. I miss your smile, your laugh, your warmth—everything about you. I just want you to know that no matter how long we’re apart, you’ll always be my favorite person. I love you endlessly.</p>
         <p>From the moment you walked into my life, everything changed. 💙✨You are the melody in my song, the poetry in my soul, and the light that guides me through my darkest days.
 
             Your smile is my sunrise, and your laughter is my favorite song.❤️❤️🎶🎶 If love was a journey, I would walk every mile just to be by your side.🛣️🛣️ If love was a language, my heart would write endless poems for you.
