--- a/video.html
+++ b/video.html
@@ -9,11 +9,11 @@
 <body>
     <div class="animation-container" id="animationContainer"></div>
     <video id="loveVideo" autoplay>
-        <source src="SRC/WhatsApp Video 2025-03-29 at 22.11.37_94945b01.mp4" type="video/mp4">
+        <source src="https://www.dropbox.com/scl/fi/lvdiyl0t1r77exxbft52r/WhatsApp-Video-2025-03-29-at-22.11.37_94945b01.mp4?rlkey=wcw6ub9ne15djk62dgog8rfee&st=ontwe4nb&dl=0" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
-    
+    <button onclick="playVideo()">Play Video</button>
     <div class="controls" id="controls">
         <button onclick="replayVideo()">Replay ❤️</button>
         <button onclick="goHome()">Go Home 🏠</button>
